# otushw

./: README.md  docker-compose.yml
load-testing/: Generator.jmx  Searcher.jmx  Staistics.jmx  report0.odt
load-testing/data/: bio.csv  cities.csv  names.csv  second_names.csv
load-testing/results/: 50T_30M_0Index.csv  analyze_index.txt  analyze_no_index.txt
otushw-test-data/: Generator.jmx  Searcher.jmx  names.csv  otushw.jmx  second_names.csv
otushw-web-back/: Cargo.toml  Dockerfile
otushw-web-back/migrations/: V20210125000000__baseline.sql  V20251102185000__users.sql  V20251117222200__add_gender.sql  V20251130012900__indexes.sql  V20251201215200__both_indexes.sql  V20251204164700__indexes.sql
otushw-web-back/src/: errors.rs  handlers.rs  main.rs  security.rs  types.rs
