[package]
name = "otushw-web-back"
version = "1.0.0"
edition = "2024"

[dependencies]
envy = { version = "0.4.2" }
actix-web = { version = "4.11.0" }
serde = { version = "1.0.228", features = ["derive"] }
postgres = { version = "0.19.12" }
refinery = { version = "0.9.0", features = ["postgres", "int8-versions"] }
bb8 = { version = "0.9.0" }
bb8-postgres = { version = "0.9.0" }
tokio-postgres = { version = "0.7.15" }
env_logger = { version = "0.11.8" }