[package]
name = "otushw-web-back"
version = "1.0.0"
edition = "2024"

[dependencies]
envy = { version = "0.4.2" }
actix-web = { version = "4.12.1" }
actix-web-httpauth = { version = "0.8.2" }
serde = { version = "1.0.228", features = ["derive"] }
postgres = { version = "0.19.12" }
refinery = { version = "0.9.0", features = ["postgres", "int8-versions"] }
bb8 = { version = "0.9.1" }
bb8-postgres = { version = "0.9.0" }
tokio-postgres = { version = "0.7.15", features = ["with-chrono-0_4", "with-uuid-1"] }
log = { version = "0.4.28" }
env_logger = { version = "0.11.8" }
chrono = { version = "0.4.42", features = ["serde"] }
thiserror = { version = "2.0.17" }
argon2 = { version = "0.6.0-rc.2", features = ["getrandom"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }